// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`excerpt > raw excerpt 1`] = `
"<template><div class="markdown-body"><p>This is an excerpt which is kept as <strong>raw Markdown</strong>.</p>
<!-- more -->
<h1>Hello</h1>
<ul>
<li>A</li>
<li>B</li>
<li>C</li>
</ul>
</div></template>
<script setup>
import { computed } from 'vue'
const props = defineProps({ frontmatterMerge: { type: Object } })
const _frontmatter = {"title":"Hey"}
const frontmatter = computed(() => {
  if (props.frontmatterReplace && typeof props.frontmatterReplace === 'object') {
    const replaceKeys = Object.keys(props.frontmatterReplace)
    return Object.entries(_frontmatter).reduce((acc, [key, value]) => ({ ...acc, [key]: replaceKeys.includes(key) ? value : undefined }), {})
  }

  return { ..._frontmatter, ...props.frontmatterMerge }
})
defineExpose({ frontmatter: frontmatter.value })
const excerpt = "\\nThis is an excerpt which is kept as **raw Markdown**.\\n\\n"
</script>
<script>
export const title = "Hey"
export const excerpt = "\\nThis is an excerpt which is kept as **raw Markdown**.\\n\\n"
</script>"
`;

exports[`excerpt > rendered excerpt 1`] = `
"<template><div class="markdown-body"><p>This is an excerpt which has been rendered to <strong>HTML</strong>.</p>
<!-- more -->
<h1>Hello</h1>
<ul>
<li>A</li>
<li>B</li>
<li>C</li>
</ul>
</div></template>
<script setup>
import { computed } from 'vue'
const props = defineProps({ frontmatterMerge: { type: Object } })
const _frontmatter = {"title":"Hey"}
const frontmatter = computed(() => {
  if (props.frontmatterReplace && typeof props.frontmatterReplace === 'object') {
    const replaceKeys = Object.keys(props.frontmatterReplace)
    return Object.entries(_frontmatter).reduce((acc, [key, value]) => ({ ...acc, [key]: replaceKeys.includes(key) ? value : undefined }), {})
  }

  return { ..._frontmatter, ...props.frontmatterMerge }
})
defineExpose({ frontmatter: frontmatter.value })
const excerpt = "<p>This is an excerpt which has been rendered to <strong>HTML</strong>.</p>\\n"
</script>
<script>
export const title = "Hey"
export const excerpt = "<p>This is an excerpt which has been rendered to <strong>HTML</strong>.</p>\\n"
</script>"
`;
